# ASR-bot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  on_pr.yaml
augmentation/: augmentation.py  readme.md
bot/: __main__.py  requirements.txt  server.py  utils.py
docker/: Dockerfile.bot  Dockerfile.inference-server
docker/bot/: Dockerfile.bot
docker/inference-server/: .dockerignore  Dockerfile.inference-server
inference-server/: __main__.py  requirements.txt
inference_server/: __main__.py  model.py  profiles.py  requirements.txt
inference_server/manifests/: local.json
model_service/: run.py
model_service/api/: asr.py
modeling/: finetuning-whisper-tiny.ipynb  requirements.txt
modeling/benchmark/: draft.txt  eval.py
modeling/evaluation/: run_eval.py
modeling/evaluation/benchmarks/: __init__.py  base.py  sber.py
modeling/lora-adapters/lora-adapter-sber-crowd/: README.md  adapter_model.safetensors
modeling/lora-adapters/lora-adapter-sber-farfield/: adapter_config.json  adapter_model.safetensors
modeling/lora-adapters/lora-adapter-single-voice/: README.md  adapter_config.json  adapter_model.safetensors
raw/: requirements.txt
tests/: conftest.py  test_inference_server.py
