[project]
name = "ASR-bot"
version = "0.1.0"
authors = ["Ailurus1"]
description = ""

dependencies = [
    "pre-commit",
    "pytest"
]

[project.optional-dependencies]
bot = [
    "python-telegram-bot",
    "requests",
]
asr-service = [
    "fastapi",
    "uvicorn",
    "torch",
    "transformers",
    "librosa"
]
train = [
    "torch",
    "transformers"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
